--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,45 @@
-body{
-  background-color: black;
-   height: vh;
-  width: vw;
-  padding: 50px;
-  justify-content: center;
+.App {
+  font-family: sans-serif;
   text-align: center;
+  /* background-color: rgb(192, 210, 216); */
 }
-.App{
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  background-color: yellowgreen;
-  width: vw;;
-  height: vh;
-  background: linear-gradient(to bottom, #3366ff 0%, #ff33cc 70%);
-padding: 30px;
-/* margin-left: 400px; */
-  border-radius: 10px;
+.movie-poster {
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
 }
- 
-h1{
-  color: white;
-  font-weight: bold;
+.movie-year {
+  margin-top: 5px;
+  
+}
+.movie-summary {
+  
+  width: 300px;
+}
+.movie-list{
+  display:flex;
+  gap:10px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
-}
-img{
+.new-movie{
   margin-top: 10px;
-  box-shadow: 5px 5px gray;
+  border: 2px solid rgb(216, 238, 247);
+  background-color: rgb(216, 238, 247);
+  border-radius: 20px;
 }
-.input-group
-{
-  font-size: 20px;
+
+.counter{
+  display:flex;
+  flex-wrap: wrap;
+justify-content: space-between;
+  font-size: 15px;
+margin: 10px;
+}
+.MovieArray{
   margin-top: 10px;
-}
-.primary{
-  margin-right: 50px;
-}
-input{
-  margin: 20px;
-}
-button{
-  margin-top: 30px;
-  width:200px;
-  height: 50px;
-  border-radius: 10px;
-  background: linear-gradient(to bottom, #0099cc 0%, #00ff00 100%);
-}
-input:hover{
-  border: 2px solid black;
-}
-button:hover{
-  color: aliceblue;
-  font-size: 20px;
+  display: flex;
+  flex-direction: row;;
+gap:20px;
 }
