--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,67 @@
-
 .App {
   font-family: sans-serif;
   text-align: center;
+  
 }
-h1 {
-  color: red;
-}
-img {
-  width: 100px;
-  margin: 10px;
-  height: 100px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.user-details{
-  border: 2px solid black;
-  background-color: black;
-  margin: 10px;
-  padding: 10px;
-}
-.user-list {
-  background-color: gray;
-  color: white;
+.App ul{
+  list-style: none;
   display: flex;
-  gap: 10px;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: black;
+margin-top: 10px;
+}
+.movie-name{
+  background-color: red;
+  color:white;
+  border-radius: 20px;
+}
+.movie-poster {
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
+}
+.movie-year {
+  margin-top: 5px;
+  
+}
+.movie-summary {
+
+  width: 300px;
+}
+.movie-list{
+  display:flex;
+  gap:10px;
   flex-wrap: wrap;
   justify-content: space-around;
-height: min-content;
-}
-.counter {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 15px;
-  margin: 10px;
-  justify-content: space-between;
-}
-.follow {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 17px;
-  margin-left: 10px;
-  gap: 2px;
-  justify-content: space-between;
-}
-.editUser{
-  margin: 10px;
-  padding: 10px;
-  gap:10px;
 }
 
+.new-movie{
+  margin-top: 10px;
+  border: 2px solid rgb(216, 238, 247);
+  background-color: rgb(216, 238, 247);
+  border-radius: 20px;
+}
+
+.counter{
+  display:flex;
+  flex-wrap: wrap;
+  font-size: 15px;
+margin: 10px;
+justify-content: space-between;
+
+}
+.MovieArray{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;;
+gap:20px;
+}
+.image img{
+  width: 20%;
+  margin: 10px;
+  height: 500px;
+  object-fit: cover;
+border-radius: 10px;
+
+}
