--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,12 @@ img {
   width: 100px;
   margin: 10px;
   height: 100px;
+    /* for zoom-in */
   object-fit: cover;
   border-radius: 50%;
 }
-.user-details{
+.user-details , .home{
+  color: white;
   border: 2px solid black;
   background-color: black;
   margin: 10px;
@@ -22,6 +24,7 @@ img {
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
+ /* instead of use media query */
   justify-content: space-around;
 height: min-content;
 }
@@ -44,4 +47,11 @@ height: min-content;
   margin: 10px;
   padding: 10px;
   gap:10px;
+}
+.image img{
+  /* !important  for over ride the img tag property */
+  width: 500px !important;
+  height: 500px !important;
+  object-fit: cover !important;
+  border-radius: 0px !important;
 }
