--- a/src/index.css
+++ b/src/index.css
@@ -1,57 +1,87 @@
+.APP{
+  text-align:center;
+  /* background-color: aliceblue; */
+}
+.home{
+  color:blue;
+  text-align:center;
+  margin:10px;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9HuMTv8-xWpScmJre60bH8Umasiu0DU0Ypg&usqp=CAU");
+background-size: cover;
 
-.App {
-  font-family: sans-serif;
-  text-align: center;
 }
-img {
-  width: 100px;
-  margin: 10px;
-  height: 100px;
-    /* for zoom-in */
-  object-fit: cover;
-  border-radius: 50%;
+/* .register{
+  min-width: fit-content;
+border-radius: 10px;
+box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
+-webkit-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
+-moz-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
+} */
+
+.contact{
+  /* color:blue; */
+  text-align:center;
+  margin:10px;
+  font-size:30px;
 }
-.user-details , .home{
-  color: white;
-  border: 2px solid black;
-  background-color: black;
-  margin: 10px;
-  padding: 10px;
+.contact h1{
+  color:blue;
+  font-size:50px; 
 }
-.user-list {
-  background-color: gray;
-  color: white;
+.contact{
+  background: #3200de;
+background: radial-gradient(circle farthest-side at bottom center, #3200de 0%, #ff00df 100%);
+background: -webkit-radial-gradient(circle farthest-side at bottom center, #3200de 0%, #ff00df 100%);
+background: -moz-radial-gradient(circle farthest-side at bottom center, #3200de 0%, #ff00df 100%);
+    font-size:40px; 
+}
+.icons{
+height:24px;
+  color:Red;
+  /* padding:20px; */
+  margin-left:30px;
+}
+
+.login{
+  text-align:center;
+  margin:20px;
+  padding:20px;
+}
+.aboutus{
+  text-align:center;
+  margin:20px;
+  padding:20px;
+}
+.products{
+  background: #00dbde;
+background: linear-gradient(27deg,#00dbde 0%, #fc00ff 100%);
+background: -webkit-linear-gradient(27deg,#00dbde 0%, #fc00ff 100%);
+background: -moz-linear-gradient(27deg,#00dbde 0%, #fc00ff 100%);
+height: vh;
+padding: 10px;
+}
+.mensfashion{
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-  flex-wrap: wrap;
- /* instead of use media query */
   justify-content: space-around;
-height: min-content;
 }
-.counter {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 15px;
-  margin: 10px;
-  justify-content: space-between;
+.mensproducts{
+  width: 250px;
+  box-sizing: border-box;
+  gap: 20px;
+margin: 10px;
+padding: 10px;
 }
-.follow {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 17px;
-  margin-left: 10px;
-  gap: 2px;
-  justify-content: space-between;
+img{
+  text-align: center;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
-.editUser{
-  margin: 10px;
-  padding: 10px;
-  gap:10px;
-}
-.image img{
-  /* !important  for over ride the img tag property */
-  width: 500px !important;
-  height: 500px !important;
-  object-fit: cover !important;
-  border-radius: 0px !important;
+.mensproducts:hover{
+border-radius: 10px;
+box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
+-webkit-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
+-moz-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
 }
