--- a/src/index.css
+++ b/src/index.css
@@ -6,34 +6,33 @@
   color:blue;
   text-align:center;
   margin:10px;
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9HuMTv8-xWpScmJre60bH8Umasiu0DU0Ypg&usqp=CAU");
-background-size: cover;
-
 }
-/* .register{
-  min-width: fit-content;
-border-radius: 10px;
-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
--webkit-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
--moz-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
-} */
-
-.contact{
-  /* color:blue; */
-  text-align:center;
-  margin:10px;
-  font-size:30px;
+.register{
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
 }
-.contact h1{
-  color:blue;
-  font-size:50px; 
+.blog-name,.blog-poster,.blog-description,.blog-text{
+  width:300px;
 }
-.contact{
-  background: #3200de;
-background: radial-gradient(circle farthest-side at bottom center, #3200de 0%, #ff00df 100%);
-background: -webkit-radial-gradient(circle farthest-side at bottom center, #3200de 0%, #ff00df 100%);
-background: -moz-radial-gradient(circle farthest-side at bottom center, #3200de 0%, #ff00df 100%);
-    font-size:40px; 
+.new-blog{
+  margin-top: 10px;
+  border: 2px solid rgb(216, 238, 247);
+  background-color: rgb(216, 238, 247);
+  border-radius: 20px;
+  
+}
+.bloglist{
+  display:flex;
+  flex-direction: row;
+  gap:10px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.blog-poster{
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
 }
 .icons{
 height:24px;
@@ -47,41 +46,5 @@ height:24px;
   margin:20px;
   padding:20px;
 }
-.aboutus{
-  text-align:center;
-  margin:20px;
-  padding:20px;
-}
-.products{
-  background: #00dbde;
-background: linear-gradient(27deg,#00dbde 0%, #fc00ff 100%);
-background: -webkit-linear-gradient(27deg,#00dbde 0%, #fc00ff 100%);
-background: -moz-linear-gradient(27deg,#00dbde 0%, #fc00ff 100%);
-height: vh;
-padding: 10px;
-}
-.mensfashion{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: space-around;
-}
-.mensproducts{
-  width: 250px;
-  box-sizing: border-box;
-  gap: 20px;
-margin: 10px;
-padding: 10px;
-}
-img{
-  text-align: center;
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-}
-.mensproducts:hover{
-border-radius: 10px;
-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
--webkit-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
--moz-box-shadow: 3px 10px 19px 3px rgba(0,0,0,0.75);
-}
+
+
